Changed '.toList()' to '.collect(Collectors.toList())' in two places.